--- a/Physics/00_Physics_Walkthrough_Starter/Physics_Walkthrough_Starter.vcxproj.filters
+++ b/Physics/00_Physics_Walkthrough_Starter/Physics_Walkthrough_Starter.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\Physics\Spring.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Physics\AABB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Camera.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="inc\Physics\Spring.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\Physics\AABB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
